--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="./puzzles/js-gausst/_00_JS_Gausst.html">js-gausst</a>
         </li>
         <li>
-            <a href="./puzzles/mi-rotate/_04_TableGauss_.html">mi-rotate</a>
+            <a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a>
         </li>
         <li>
             <a href="./puzzles/Ball%20without%20Barboss.html">Ball without Barboss</a>
