fix and add photo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </li>
     </ul>
     <hr />
-    <h2>Фото</h2>
+    <h2>Хохмы</h2>
     <li>
         <a href="./images/mila-puzzle.jpg">mila puzzle</a>
     </li>
@@ -40,6 +40,9 @@
     </li>
     <li>
         <a href="./images/mogychi-lap.jpg">Mogychi Lap</a>
+    </li>
+    <li>
+        <a href="./images/mila-mom.jpg">Royal Mom</a>
     </li>
 </body>
 </html>
