--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <a href="./images/mogychi-lap.jpg">Mogychi Lap</a>
     </li>
     <li>
-        <a href="./images/mila-mom.jpg">Royal Mom</a>
+        <a href="./images/mila_mom.jpg">Royal Mom</a>
     </li>
 </body>
 </html>
