--- a/puzzles/flag/_Flag.html
+++ b/puzzles/flag/_Flag.html
@@ -92,7 +92,7 @@ Speed <input type="range" value="25" min=1 max=50 step=1 onchange = 'akf = +this
 	var canvas=document.getElementById("Mycanvas");
     var ctx=canvas.getContext("2d");
  var img2=new Image();  // Создаём изображение
- img2.src = "MiLA.jpg"; 
+ img2.src = "Mila.jpg"; 
 
 function Run(){
  let tim = setInterval(function() {
