--- a/puzzles/Puzzle_00.html
+++ b/puzzles/Puzzle_00.html
@@ -104,16 +104,16 @@ label:hover{background-color: rgb(150,60,60);}
     <input type='button' value='New variant' onclick='SetData()'/>
 <select name: 'S01' id="S01">
      <option value="">Select Picture</option>
-     <option value="..//Image/Mila.jpg">Mila</option>
-     <option value="..//Image/MI_01.jpg">Michael Iv.</option>
-     <option value="..//Image/BRB_01.jpg">Barboss</option>
-     <option value="..//Image/URS.jpg">Ursuses</option>
-     <option value="..//Image/DBLD_02.jpg">prof. Dumbledorf</option>
-     <option value="..//Image/Sirano_01.jpg">Sirano</option>
-     <option value="..//Image/ML_01.jpg">Mog. Lapy</option>
-     <option value="..//Image/Snuglse_02.jpg">Snugles</option>
-     <option value="..//Image/Paddy_01.jpg">Paddy</option>
-     <option value="..//Image/Valdek.jpg">Valdek</option>
+     <option value="Mila.jpg">Mila</option>
+     <option value="MI_01.jpg">Michael Iv.</option>
+     <option value="BRB_01.jpg">Barboss</option>
+     <option value="URS.jpg">Ursuses</option>
+     <option value="DBLD_02.jpg">prof. Dumbledorf</option>
+     <option value="Sirano_01.jpg">Sirano</option>
+     <option value="ML_01.jpg">Mog. Lapy</option>
+     <option value="Snuglse_02.jpg">Snugles</option>
+     <option value="Paddy_01.jpg">Paddy</option>
+     <option value="Valdek.jpg">Valdek</option>
   </select> 
     <input type="file" id="inp" onchange="showFile(this)"> 
     <label for="inp" id="label">Open File</label>  
