--- a/puzzles/barboss/Show_Progr_00.html
+++ b/puzzles/barboss/Show_Progr_00.html
@@ -22,7 +22,7 @@
 <h3>Список демонстраций программ 2020</h3>  
 	
     <img  src="..//image/BRB_01.jpg" id="i0">
-    <img  src="..//image/DBLD_02.jpg" id="i1">
+    <img  src="./DBLD_02.jpg" id="i1">
     <img  src="..//image/Ml00.jpg" id="i2">
     <img  src="..//image/MI_01.jpg" id="i3">
     <img  src="..//image/Snuglse_01.jpg" id="i4">
