--- a/puzzles/barboss/Show.html
+++ b/puzzles/barboss/Show.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Show_Progr_00</title>
+  <title>Show_Progr</title>
    <style>
       h3{font-size: 40px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
       body{background-color:rgb(225,225,235);} 
