--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="./puzzles/flag/_Flag.html">flag</a>
         </li>
         <li>
-            <a href="./puzzles/js-gausst/_00_JS_Gausst.html">js-gausst</a>
+            <a href="./puzzles/barboss/Show.html">js-gausst</a>
         </li>
         <li>
             <a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a>
