--- a/puzzles/barboss/Show.html
+++ b/puzzles/barboss/Show.html
@@ -21,7 +21,7 @@
 <body>
 <h3>Список демонстраций программ 2020</h3>  
 	
-    <img  src="..//image/BRB_01.jpg" id="i0">
+    <img  src="../BRB_01.jpg" id="i0">
     <img  src="./DBLD_02.jpg" id="i1">
     <img  src="..//image/Ml00.jpg" id="i2">
     <img  src="..//image/MI_01.jpg" id="i3">
