--- a/puzzles/barboss/Show.html
+++ b/puzzles/barboss/Show.html
@@ -22,11 +22,11 @@
 <h3>Список демонстраций программ 2020</h3>  
 	
     <img  src="..//BRB_01.jpg" id="i0">
-    <img  src=".//DBLD_02.jpg" id="i1">
-    <img  src="..//image/Ml00.jpg" id="i2">
-    <img  src="..//image/MI_01.jpg" id="i3">
-    <img  src="..//image/Snuglse_01.jpg" id="i4">
-    <img  src="..//image/Sirano_01.jpg" id="i5">
+    <img  src="..//DBLD_02.jpg" id="i1">
+    <img  src="..//Ml00.jpg" id="i2">
+    <img  src="..//MI_01.jpg" id="i3">
+    <img  src="..//Snuglse_01.jpg" id="i4">
+    <img  src="..//Sirano_01.jpg" id="i5">
   
     <p><a href="_Flag07_Help.html">FLAG</a> демонстрация колебаний флага</p>
     <p><a href="Puzzle_00.html">PUZZLE</a> 
