--- a/puzzles/barboss/Show.html
+++ b/puzzles/barboss/Show.html
@@ -23,9 +23,9 @@
 	
     <img  src="..//BRB_01.jpg" id="i0">
     <img  src="..//DBLD_02.jpg" id="i1">
-    <img  src="..//Ml_01.jpg" id="i2">
+    <img  src="..//ML_01.jpg" id="i2">
     <img  src="..//MI_01.jpg" id="i3">
-    <img  src="..//Snuglse_01.jpg" id="i4">
+    <img  src="..//Snuglse_02.jpg" id="i4">
     <img  src="..//Sirano_01.jpg" id="i5">
   
     <p><a href="_Flag07_Help.html">FLAG</a> демонстрация колебаний флага</p>
