--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Михаил Иванович</title>
+   <style>
+      h3{font-size: 40px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
+      body{background-color:rgb(225,225,235);} 
+      p{margin-left: 3%; color: rgb(5,5,155)}   
+      img{margin-left: 1.7%; border-radius: 33%;    box-shadow: 10px 10px 25px rgb(125,100,85);}
+      #i0{width: 12%; transform:rotate(-20deg);}  
+      #i1{width: 14%;transform:rotate(-10deg);}  
+      #i2{width: 16%}  
+      #i3{width: 16%;}   
+      #i4{width: 14%; transform:rotate(10deg);}  
+      #i5{width: 12%; transform:rotate(20deg);}  
+      
+    </style>    
 </head>
 <body>
     <h1>Михаил Иванович</h1>
-    <img src="./images/mogychi-lap.jpg" alt="magychi lap" />
+    <img  src="./puzzles/BRB_01.jpg" id="i0">
+    <img  src="./puzzles/DBLD_02.jpg" id="i1">
+    <img  src="./puzzles/ML_01.jpg" id="i2">
+    <img  src="./Image/MI_01.jpg" id="i3">
+    <img  src="./puzzles/Snuglse_02.jpg" id="i4">
+    <img  src="./puzzles/Sirano_01.jpg" id="i5">
+
+<!--     <img src="./images/mogychi-lap.jpg" alt="magychi lap" /> -->
     <hr />
     <h2>Пазлы</h2>
     <ul>
