--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <img  src="./puzzles/BRB_01.jpg" id="i0">
     <img  src="./puzzles/DBLD_02.jpg" id="i1">
     <img  src="./puzzles/ML_01.jpg" id="i2">
-    <img  src="./Image/MI_01.jpg" id="i3">
+    <img  src="./puzzles/MI_01.jpg" id="i3">
     <img  src="./puzzles/Snuglse_02.jpg" id="i4">
     <img  src="./puzzles/Sirano_01.jpg" id="i5">
 
