--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
             <a href="./puzzles/barboss/Show.html">заставка 51</a>
         </li>
         <li>
+            <a href="./billiard/bill_00r.html">заставка 51</a>
+        </li>
+        <li>
             <a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a>
         </li>
         <li>
