--- a/billiard/Bill_00r.html
+++ b/billiard/Bill_00r.html
@@ -68,7 +68,7 @@ label{display: inline-block; width: 120px;
   <img ondragover="event.stopPropagation(); event.preventDefault();"
      ondrop="event.stopPropagation(); event.preventDefault();
      dodrop(event);"
-   id="imbg" src="Pict_Bg/HC_06.jpg"><br>
+   id="imbg" src="Pict_BG/HC_06.jpg"><br>
   <img id="im0" src="Pict_Zv/BRB_01.jpg"> 
   <img id="im1" src="Pict_Zv/DBLD_02.jpg">
   <img id="im2" src="Pict_Zv/Snuglse_02.jpg">
@@ -208,7 +208,7 @@ let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let
  let Nst = 300; let Nb=30; let tint=30;  pim=Math.PI;
  let sin1=[];   let cos1=[]; let lxy=[]; 
   
- let BG=["Pict_Bg/HC_01.jpg","Pict_Bg/HC_02.jpg","Pict_Bg/HC_03.jpg","Pict_Bg/HC_04.jpg","Pict_Bg/HC_05.jpg","Pict_Bg/HC_06.jpg","Pict_Bg/HC_07.jpg","Pict_Bg/HC_08.jpg"] 
+ let BG=["Pict_BG/HC_01.jpg","Pict_BG/HC_02.jpg","Pict_BG/HC_03.jpg","Pict_BG/HC_04.jpg","Pict_BG/HC_05.jpg","Pict_BG/HC_06.jpg","Pict_BG/HC_07.jpg","Pict_BG/HC_08.jpg"] 
  let name0=['Barboss','Prof. Dumbl','Snagles','Sirano','Mog_Lapy','Murr','Ralpha'];  let name=name0;
  let name1=['Paddy','Racoon HC','Ursus HC','Panda HC','Dog HC','Misha','Kesha'];
  let name0c=['Barboss','Prof. Dumbl','Snugles','Sirano','Mog_Lapy','Murr','Ralpha'];  
