--- a/billiard/Bill_00r.html
+++ b/billiard/Bill_00r.html
@@ -215,7 +215,7 @@ let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let
  let name1c=['Paddy','Valdek','CUBA','Misha W','mr Magoo','Fox','Kesha'];
 
  let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/Urs_00.png','Pict_Zv/Panda_0.png','Pict_Zv/Dog_00.png','Pict_Zv/Misha.png','Pict_Zv/Keshapng.png'];
- let zv51=['Pict_Zv/BRB.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Dog51.png'];
+ let zv51=['Pict_Zv/Brb.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Dog51.png'];
  let zvWc=['Pict_Zv/Paddy_01.jpg','Pict_Zv/Vald_01.JPG','Pict_Zv/3.jpg','Pict_Zv/5.jpg','Pict_Zv/7.jpg','Pict_Zv/Fox01.jpg','Pict_Zv/Kesha.jpg'];
  let zv51c=['Pict_Zv/BRB_01.jpg','Pict_Zv/DBLD_02.jpg','Pict_Zv/Snuglse_02.jpg','Pict_Zv/Sirano_01.jpg','Pict_Zv/ML00.JPG','Pict_Zv/Murr200.jpg','Pict_Zv/Ralpha200.jpg'];
  let ZV0=[]; ZV0=zv51; let ZV1=[]; ZV1=zvW;
