--- a/billiard/Bill_00r.html
+++ b/billiard/Bill_00r.html
@@ -429,7 +429,7 @@ function New(){t0[pic] = +t00.value; t1[pic] = +t01.value; t2[pic] = +t02.value;
 
 function Run(){
  let tim = setInterval(function() {
-   if (!act) {clearInterval(tim); document.getElementById("btn0").value='Teatr'} else
+   if (!act) {clearInterval(tim); document.getElementById("btn0").value='Theater'} else
    document.getElementById("btn0").value='STOP';
    OneStep()
 },tint); }//Run Teatr
