--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -120,7 +120,7 @@ label{display: inline-block; width: 120px;
   <button id="bt0" onclick="New()">NEW</button><br>
   
   <input type="radio" name="rd" onclick='Rct()'>Rctng
-  <input type="radio" checked name="rd" onclick='Circle()'>Circl
+  <input type="radio" checked name="rd" onclick='Circle()'>Circl<br>
   <input type="radio" checked name="rad" onclick='OldIm()'>ZV_51
   <input type="radio" name="rad" onclick='NewIm()'>Zv_WF
 
