--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -181,7 +181,7 @@ label{display: inline-block; width: 120px;
 <script src="V2.js"></script>
 
  <script> 
-  let PorT=0; let VS=0; let opc=1;
+  let PorT=0; let VS=0; let opc=1;   fl=1;
   let Ncol=['red','green','yellow','blue','Lime','BlueViolet','Crimson','Fuchsia'];
   let rnd=[];
   let Nzv=7; let kpv=document.body.clientWidth/100;   let ib=0; let iZv=0; let rect=1;
