--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -149,6 +149,8 @@ label{display: inline-block; width: 120px;
     <input type="radio" checked name="varD" value="0" onclick='iv=+this.value'>V0
     <input type="radio" name="varD" value="1" onclick='iv=+this.value'>V1
     <input type="radio" name="varD" value="2" onclick='iv=+this.value'>V2<br>
+    <button onclick="if (fl==1) divSave.style.display='none'; else divSave.style.display='block';
+   fl=1-fl;">Sv/Op</button>
    <button onclick="OpenJS()">NewVar</button><br>
      
  </div>
