--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -6,7 +6,7 @@
     <style> 
     body{margin: 0vw}  
     div{ width: 11vw; height: 350px;
-         position: .absolute; 
+         position: absolute; 
          top: 2px;
          border: 1px solid black; box-shadow:0 0 6px 0 #222299;
          background-color: rgb(240,240,250);
