--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -105,7 +105,7 @@ label{display: inline-block; width: 120px;
   
  <div id="c1"> 
   
-  <input  id="tname" value="Barboss"><br> 
+ <input  id="tname" value="Barboss"><br> 
   t0 = <input type="number" id="t00"><br> 
   t1 = <input type="number" id="t01"><br> 
   t2 = <input type="number" id="t02"><br> 
@@ -218,7 +218,10 @@ let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let
 
  let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/Urs_00.png','Pict_Zv/Panda_0.png','Pict_Zv/Dog_00.png','Pict_Zv/Misha.png','Pict_Zv/Keshapng.png'];
  let zv51=['Pict_Zv/Brb.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Dog51.png'];
- let zvWc=['Pict_Zv/Paddy_01.jpg','Pict_Zv/Vald_01.JPG','Pict_Zv/3.jpg','Pict_Zv/5.JPG','Pict_Zv/7.JPG','Pict_Zv/Fox01.JPG','Pict_Zv/Kesha.jpg'];
+
+let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/3.png','Pict_Zv/5.png','Pict_Zv/mila200.png','Pict_Zv/7.png','Pict_Zv/Keshapng.png'];
+let zv51=['Pict_Zv/BRB.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Ralpha51.png'];   
+   let zvWc=['Pict_Zv/Paddy_01.jpg','Pict_Zv/Vald_01.JPG','Pict_Zv/3.jpg','Pict_Zv/5.JPG','Pict_Zv/7.JPG','Pict_Zv/Fox01.JPG','Pict_Zv/Kesha.jpg'];
  let zv51c=['Pict_Zv/BRB_01.jpg','Pict_Zv/DBLD_02.jpg','Pict_Zv/Snuglse_02.jpg','Pict_Zv/Sirano_01.jpg','Pict_Zv/ML00.JPG','Pict_Zv/Murr200.jpg','Pict_Zv/Ralpha200.jpg'];
  let ZV0=[]; ZV0=zv51; let ZV1=[]; ZV1=zvW;
 
