--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -216,8 +216,8 @@ let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let
  let name0c=['Barboss','Prof. Dumbl','Snugles','Sirano','Mog_Lapy','Murr','Ralpha'];  
  let name1c=['Paddy','Valdek','CUBA','Misha W','mr Magoo','Fox','Kesha'];
 
- let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/Urs_00.png','Pict_Zv/Panda_0.png','Pict_Zv/Dog_00.png','Pict_Zv/Misha.png','Pict_Zv/Keshapng.png'];
- let zv51=['Pict_Zv/Brb.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Dog51.png'];
+// let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/Urs_00.png','Pict_Zv/Panda_0.png','Pict_Zv/Dog_00.png','Pict_Zv/Misha.png','Pict_Zv/Keshapng.png'];
+// let zv51=['Pict_Zv/Brb.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Dog51.png'];
 
 let zvW=['Pict_Zv/Paddy_00.png','Pict_Zv/Racoon.png','Pict_Zv/3.png','Pict_Zv/5.png','Pict_Zv/mila200.png','Pict_Zv/7.png','Pict_Zv/Keshapng.png'];
 let zv51=['Pict_Zv/BRB.png','Pict_Zv/DmbD.png','Pict_Zv/Snagles.gif','Pict_Zv/Sir_00.png','Pict_Zv/ML00.png','Pict_Zv/MurrPng.png','Pict_Zv/Ralpha51.png'];   
