--- a/billiard/Bill_00.html
+++ b/billiard/Bill_00.html
@@ -212,7 +212,8 @@ let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let
   
  let BG=["Pict_BG/HC_01.jpg","Pict_BG/HC_02.jpg","Pict_BG/HC_03.jpg","Pict_BG/HC_04.jpg","Pict_BG/HC_05.jpg","Pict_BG/HC_06.jpg","Pict_BG/HC_07.jpg","Pict_BG/HC_08.jpg"] 
  let name0=['Barboss','Prof. Dumbl','Snagles','Sirano','Mog_Lapy','Murr','Ralpha'];  let name=name0;
- let name1=['Paddy','Racoon HC','Ursus HC','Panda HC','Dog HC','Misha','Kesha'];
+ let 
+name1=['Paddy','Racoon HC','CUBA','MISHA','Mila','mr Magoo','Kesha'];
  let name0c=['Barboss','Prof. Dumbl','Snugles','Sirano','Mog_Lapy','Murr','Ralpha'];  
  let name1c=['Paddy','Valdek','CUBA','Misha W','mr Magoo','Fox','Kesha'];
 
