--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     <li>
         <a href="./images/mila-puzzle.jpg">mila puzzle</a>
     </li>
+    <li>
+        <a href="./images/2020_epidemic.jpg">2020_epidemic</a>
+    </li>
 <li>
         <a href="./images/80Ded.gif">ded_80</a>
     </li>
