--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Михаил Иванович</title>
    <style>
+    * {  box-sizing: border-box; }   
+   .column {
+  float: left;  
+  padding: 2px;
+  width: 50%;
+}
       h1{font-size: 40px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
+      h5{font-size: 28px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
       body{background-color:rgb(225,225,235);} 
-      p{margin-left: 3%; color: rgb(5,5,155)}   
+      p{margin-left: 3%; color: rgb(5,5,155);font-family: 'Courier New'; font-size: 20px;}
+      a{font-weight: bold;}   
       img{margin-left: 1.7%; border-radius: 33%;    box-shadow: 10px 10px 25px rgb(125,100,85);}
       #i0{width: 12%; transform:rotate(-20deg);}  
       #i1{width: 14%;transform:rotate(-10deg);}  
@@ -27,51 +35,29 @@
     <img  src="./puzzles/Snuglse_02.jpg" id="i4">
     <img  src="./puzzles/Sirano_01.jpg" id="i5">
 
-<!--     <img src="./images/mogychi-lap.jpg" alt="magychi lap" /> -->
-    <hr />
-    <h2>Пазлы</h2>
-    <ul>
-        <li>
-            <a href="./puzzles/flag/_Flag.html">flag</a>
-        </li>
-        <li>
-            <a href="./puzzles/barboss/Show.html">заставка 51</a>
-        </li>
-        <li>
-            <a href="./billiard/Bill_01.html">Биллиард</a>
-        </li>
-        <li>
-            <a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a>
-        </li>
-        <li>
-            <a href="./puzzles/Ball%20without%20Barboss.html">Ball without Barboss</a>
-        </li>
-        <li>
-            <a href="./puzzles/Puzzle_00.html">Puzzle_00</a>
-        </li>
-    </ul>
-    <hr />
-    <h2>Хохмы</h2>
-    <li>
-        <a href="./images/mila-puzzle.jpg">mila puzzle</a>
-    </li>
-    <li>
-        <a href="./images/2020_epidemic.jpg">2020_epidemic</a>
-    </li>
-<li>
-        <a href="./images/80Ded.gif">ded_80</a>
-    </li>
-    <li>
-        <a href="./images/mila-tiger.jpg">mila tiger</a>
-    </li>
-    <li>
-        <a href="./images/FromRussiaWithLove.jpg">From Russia with Love</a>
-    </li>
-    <li>
-        <a href="./images/mogychi-lap.jpg">Mogychi Lap</a>
-    </li>
-    <li>
-        <a href="./images/mila_mom.jpg">Royal Mom</a>
-    </li>
+ <div class="row" style='margin-top: 2%'>
+  <div class="column" >
+    <h5>Programs</h5>
+    <p><a href="./puzzles/flag/_Flag.html">flag</a> </p>
+    <p><a href="./puzzles/barboss/Show.html">заставка 51</a> </p>
+    <p><a href="./billiard/Bill_01.html">Биллиард</a> </p>
+    <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
+    <p><a href="./puzzles/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
+    <p><a href="./puzzles/Puzzle_00.html">Puzzle_00</a></p>
+    <p><a href="./puzzles/line_r.html">Line_R</a></p>
+  </div>
+  <div class="column">
+    <h5>Pictires</h5>
+    <p><a href="./images/mila-puzzle.jpg">mila puzzle</a></p>
+    <p><a href="./images/2020_epidemic.jpg">2020_epidemic</a></p>
+    <p><a href="./images/80Ded.gif">ded_80</a></p>
+    <p><a href="./images/mila-tiger.jpg">mila tiger</a></p>
+    <p><a href="./images/FromRussiaWithLove.jpg">From Russia with Love</a></p>
+    <p><a href="./images/mogychi-lap.jpg">Mogychi Lap</a></p>
+    <p><a href="./images/mila_mom.jpg">Royal Mom</a></p>
+  </div>
+</div>
+
+
 </body>
 </html>
