--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    .column {
   float: left;  
   padding: 2px;
-  width: 50%;
+  width: 32%;
 }
       h1{font-size: 40px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
       h5{font-size: 28px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
@@ -55,6 +55,12 @@
     <p><a href="./images/FromRussiaWithLove.jpg">From Russia with Love</a></p>
     <p><a href="./images/mogychi-lap.jpg">Mogychi Lap</a></p>
     <p><a href="./images/mila_mom.jpg">Royal Mom</a></p>
+  </div>
+  <div class="column">
+    <h5>Family and friends</h5>
+    <p><a href="./puzzles/galina/index_g.html">Wife Galina</a></p>
+    <p><a href="./puzzles/ana/index_a.html">Daughter Anastasiia</a></p>
+    <p><a href="./puzzles/nick/index_n.html">Grandson Nicky</a></p>
   </div>
 </div>
 
