--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -25,9 +25,9 @@
 </head>
 <body>
     <h1>Анастасия Гриценко</h1>
-    <img  src="./pict/rp01.jpg" id="i0">
-    <img  src="./pict/rp00.jpg" id="i1">
-    <img  src="./pict/rp02.jpg" id="i2">
+    <img  src="./Pict/rp01.JPG" id="i0">
+    <img  src="./Pict/rp00.JPG" id="i1">
+    <img  src="./Pict/rp02.JPG" id="i2">
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
