--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <h1>Анастасия Гриценко</h1>
-    <img  src="./Pict/rp01.JPG" id="i0">
+    <img  src="Pict/rp01.JPG" id="i0">
     <img  src="./Pict/rp00.JPG" id="i1">
     <img  src="./Pict/rp02.JPG" id="i2">
 
