--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -25,9 +25,9 @@
 </head>
 <body>
     <h1>Никита Овсянников</h1>
-    <img  src="Pict/n01.JPG" id="i1">
-    <img  src="Pict/n10.JPG" id="i0">
-    <img  src="Pict/n00.JPG" id="i2">
+    <img  src="pict/n01.JPG" id="i1">
+    <img  src="pict/n10.JPG" id="i0">
+    <img  src="pict/n00.JPG" id="i2">
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
