--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -16,7 +16,7 @@
       body{background-color:rgb(225,225,235); text-align: center;} 
       p{margin-left: 3%; color: rgb(5,5,155);font-family: 'Courier New'; font-size: 20px;}
       a{font-weight: bold;}   
-      img{ border-radius: 33%;    box-shadow: 10px 10px 25px rgb(125,100,85);}
+      img{ border-radius: 33%; box-shadow: 10px 10px 25px rgb(125,100,85); margin: 1%}
       #i0{width: 14%; transform:rotate(-20deg);}  
       #i1{width: 16%;}  
       #i2{width: 14%; transform:rotate(20deg);}  
