--- a/puzzles/ana/slider/slider.html
+++ b/puzzles/ana/slider/slider.html
@@ -6,7 +6,7 @@
     <style> 
    body{background-image: linear-gradient(to left, black, rgb(0,0,100));font-family: 'Courier New'; color: white}   
    figure {
-  background: repeating-linear-gradient(45deg, transparent, transparent .1vw, #ffffff45 .1vw, #b7754594 .25vw), linear-gradient(to bottom, #eeeeee5c, #bfbfbf1a);
+  background: linear-gradient(to bottom, #eeeeee5c, #bfbfbf1a);
   box-shadow: inset 0 0 1vw #000;
   outline: .2vw solid #b1917fbd;
   border: .1vw dashed #999;
