--- a/puzzles/ana/slider/slider.html
+++ b/puzzles/ana/slider/slider.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-      <title>SLIDER03</title>
+      <title>Ana</title>
     <style> 
    body{background-image: linear-gradient(to left, black, rgb(0,0,100));font-family: 'Courier New'; color: white}   
    figure {
