--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -16,10 +16,10 @@
       body{background-color:rgb(225,225,235); text-align: center;} 
       p{margin-left: 3%; color: rgb(5,5,155);font-family: 'Courier New'; font-size: 20px;}
       a{font-weight: bold;}   
-      img{ border-radius: 33%; box-shadow: 10px 10px 25px rgb(125,100,85); margin: 1%}
-      #i0{width: 17%; transform:rotate(-20deg);}  
-      #i1{width: 21%;}  
-      #i2{width: 17%; transform:rotate(20deg);}  
+      img{ border-radius: 33%;    box-shadow: 10px 10px 25px rgb(125,100,85);}
+      #i0{width: 14%; transform:rotate(-20deg);}  
+      #i1{width: 16%;}  
+      #i2{width: 14%; transform:rotate(20deg);}  
       
     </style>    
 </head>
@@ -32,6 +32,7 @@
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
+    <p><a href="puzzlet.html">PUZZLE</a>Можно ctr+V вставить другую картинку</p>
   </div>
   <div class="column">
     <h5>Pictires</h5>
