--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -32,7 +32,7 @@
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
-    <p><a href="puzzlet.html">PUZZLE</a>Можно ctr+V вставить другую картинку</p>
+    <p><a href="puzzlet.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>
   </div>
   <div class="column">
     <h5>Pictires</h5>
