--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -25,13 +25,14 @@
 </head>
 <body>
     <h1>Никита Овсянников</h1>
-    <img  src="pict/n01.jpg" id="i1">
-    <img  src="pict/n10.jpg" id="i0">
-    <img  src="pict/n00.jpg" id="i2">
+    <img  src="Pict/n01.JPG" id="i1">
+    <img  src="Pict/n10.JPG" id="i0">
+    <img  src="Pict/n00.JPG" id="i2">
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
+  <p><a href="puzzle.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>  
   </div>
   <div class="column">
     <h5>Pictires</h5>
