--- a/puzzles/nick/puzzle.html
+++ b/puzzles/nick/puzzle.html
@@ -23,7 +23,7 @@
  var canvas = document.getElementById("Mycanvas")
  var ctx = canvas.getContext("2d");
  var img0 = new Image();  // Создаём изображение
- img0.src = "Pict/n2009.jpg";
+ img0.src = "pict/n2009.jpg";
  SetImage();  
 
 
