--- a/puzzles/ana/slider/slider.html
+++ b/puzzles/ana/slider/slider.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-      <title>Ana</title>
+      <title>_SLIDER_</title>
     <style> 
-   body{background-image: linear-gradient(to left, black, rgb(0,0,100));font-family: 'Courier New'; color: white}   
+   body{background-color: rgb(0,0,50); text-align: center; font-family: 'Courier New'; color: white}   
    figure {
-  background: linear-gradient(to left, rgb(0,0,100), black);
+  background-color: rgb(0,0,50);     
   box-shadow: inset 0 0 1vw #000;
   outline: .2vw solid #b1917fbd;
   border: .1vw dashed #999;
@@ -15,7 +15,6 @@
   position: relative;
   overflow: hidden;
   margin: 0 auto;
-  left: 24vw;
   width: 52vw;
   height: 52vw;
 }
@@ -24,8 +23,7 @@
     opacity: 0;
     left: 1vw;
     top: 1vw;
-  }
-  #sl0{margin-left: 24vw;}
+  } 
   #bt{width: 100px; height: 30px;
     font-family: 'Courier New'; font-size: 18px; font-weight: bold; color: white; }
     </style>
@@ -44,26 +42,24 @@
   <img  src="rp6.jpg" > 
   </figure><br>
 
- <input type="range" id="sl0" min="5" max="50" value="15" onchange="tp=value*200;">Pause 
-<input type='button' value='PLAY' id="bt" onclick="OneStep();">
-Trans<input type="range" id="sl1" min="3" max="10" value="5" onchange="tij=value*10;">
+ <input type="range" min="10" max="30" value="20" onchange="tp=value*200;">Pause 
+<input type='button' value='PLAY' id="bt" onclick="Go();">
+Trans<input type="range" min="3" max="8" value="5" onchange="tij=value*5;">
+
  <script type="text/javascript">
  var e = document.querySelectorAll('figure img');  Np = e.length; 
- let wp=[]; let hp=[]; let W=[]; let H=[];   FlShow=false;    let t0,t1; tp=3000; tij=50;
- d = new Date();  t0 = d.getMilliseconds();
+ let wp=[]; let hp=[]; let W=[]; let H=[];   FlShow=false;    tp=4000; tij=25;
+ 
  setTimeout(SetWH, 300); bt.style.background = 'green';
 
+function Go(){FlShow =!FlShow; if (!FlShow){bt.value='PLAY'; bt.style.background='rgb(0,100,0)'} else {bt.value = 'STOP'; Show(); bt.style.background = 'rgb(210,0,0)'}}
 
-function OneStep(){  FlShow =!FlShow;  if (!FlShow){bt.value = 'PLAY'; bt.style.background = 'rgb(0,100,0)'} else{bt.value = 'STOP'; bt.style.background = 'rgb(210,0,0)'}
-if (FlShow)
-Show();
-}
 function SetWH(){ 
   if(e) { 
 for (j = 0; j < Np; j++) {
  W=e[j].width;  H = e[j].height; 
  if (W>H) {wp[j]=50; hp[j]=50*H/W} else {hp[j]=50; wp[j]=50*W/H} 
-}} d1 = new Date(); t1 = d1.getMilliseconds(); }//alert(t1-t0)}
+}}}
 
 let i=0;  let N1=20;
 
@@ -75,15 +71,14 @@ if(e) {
       i = i === Np ? 0 : i;
         e[i].style.width = wp[i] + 'vw'; e[i].style.height = hp[i] + 'vw';
         e[i].style.left = 26-wp[i]/2 + 'vw'; e[i].style.top = 26-hp[i]/2 + 'vw';
-    
-  let tim1=setInterval(() => { if (i1==N1) {clearInterval(tim1);} else {
+   
+    let tim1=setInterval(() => { if (i1==N1) {clearInterval(tim1);} else {
       i1++; op=1-i1/N1;
         e[ns].style.opacity = op; 
         e[i].style.opacity = 1-op;
   }}, tij);      
   }}, tp); 
 }}
-
 
  </script>
   </body>
