--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -14,8 +14,8 @@
       h1{font-size: 40px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
       h5{font-size: 28px; text-align: center; font-family: 'Courier New'; color: rgb(5,5,155)}
       body{background-color:rgb(225,225,235); text-align: center;} 
-      p{margin-left: 3%; color: rgb(5,5,155);font-family: 'Courier New'; font-size: 20px;}
-      a{font-weight: bold;}   
+      p{margin-left: 3%; color: rgb(5,5,155);font-family: 'tnr'; font-size: 15px;}
+      a{font-family: 'Courier New'; font-size: 20px;font-weight: bold;}   
       img{ border-radius: 33%;    box-shadow: 10px 10px 25px rgb(125,100,85); margin: 1%}
       #i1{width: 16%; transform:rotate(-12deg);}  
       #i0{width: 20%; border-radius: 3%;}  
@@ -25,14 +25,15 @@
 </head>
 <body>
     <h1>Никита Овсянников</h1>
-    <img  src="pict/n01.jpg" id="i1">
-    <img  src="pict/n10.jpg" id="i0">
-    <img  src="pict/n00.jpg" id="i2">
+    <img  src="Pict/n01.JPG" id="i1">
+    <img  src="Pict/n10.JPG" id="i0">
+    <img  src="Pict/n00.JPG" id="i2">
 
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
   <p><a href="puzzle.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>  
+  <p><a href="slider_pz1.html">SliderP1</a><br></p>  
   </div>
   <div class="column">
     <h5>Pictires</h5>
